# Rubiks_Cube_Solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  Run_Rubiks_Solver.bat  main.cpp  tests.cpp
.github/: repo-details.md
.github/workflows/: cpp.yml
Model/: RubicsCube1dArray.cpp  RubiksCube.cpp  RubiksCube.h  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabase/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
